/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    id "com.gradleup.shadow" version "9.2.2"
    id "com.google.protobuf" version "0.9.5"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

ext {
    flinkVersion = '1.20.3'
    slf4jVersion = '1.7.36'
    log4jVersion = '2.24.3'
    protobufVersion = '4.33.1'
    chillProtobufVersion = '0.10.0'
    kafkaConnectorVersion = '3.3.0-1.20'
    gestaltVersion = '0.36.1'
    snappyVersion = '1.1.10.8'
    lombokVersion = '1.18.42'
    mongoBomVersion = '5.6.1'
    reactorBomVersion = '2025.0.0'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {
        url = "https://repository.apache.org/content/repositories/snapshots"
        mavenContent {
            snapshotsOnly()
        }
    }
}

// configurations {
//     flinkShadowJar // dependencies which go into the shadowJar
//     // always exclude these (also from transitive dependencies) since they are provided by Flink
//     flinkShadowJar.exclude group: 'org.apache.flink', module: 'force-shading'
//     flinkShadowJar.exclude group: 'com.google.code.findbugs', module: 'jsr305'
//     flinkShadowJar.exclude group: 'org.slf4j'
//     flinkShadowJar.exclude group: 'org.apache.logging.log4j'
// }

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
    compileOnly "org.apache.flink:flink-streaming-java:${flinkVersion}"
    compileOnly "org.apache.flink:flink-clients:${flinkVersion}"
    compileOnly "org.apache.flink:flink-runtime-web:${flinkVersion}"

    implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
    implementation "com.twitter:chill-protobuf:${chillProtobufVersion}"

    implementation "org.xerial.snappy:snappy-java:${snappyVersion}"

    implementation "org.apache.flink:flink-connector-base:${flinkVersion}"
    implementation "org.apache.flink:flink-connector-kafka:${kafkaConnectorVersion}"

    implementation "com.github.gestalt-config:gestalt-core:${gestaltVersion}"

    implementation platform("org.mongodb:mongodb-driver-bom:5.6.1")
    implementation platform("io.projectreactor:reactor-bom:2025.0.0")
    implementation "io.projectreactor:reactor-core"
    implementation "org.mongodb:mongodb-driver-reactivestreams"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
    runtimeOnly "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    runtimeOnly "org.apache.logging.log4j:log4j-core:${log4jVersion}"
}

sourceSets {
    // main.compileClasspath += configurations.flinkShadowJar
    // main.runtimeClasspath += configurations.flinkShadowJar
    // test.compileClasspath += configurations.flinkShadowJar
    // test.runtimeClasspath += configurations.flinkShadowJar
    // javadoc.classpath += configurations.flinkShadowJar
    main {
        proto {
            srcDir '../../proto'
        }
    }
}
run.classpath = sourceSets.main.runtimeClasspath

protobuf {
  protoc {
    artifact = "com.google.protobuf:protoc:${protobufVersion}:linux-x86_64@exe"
  }
}

jar {
    manifest {
        attributes 'Built-By': System.getProperty('user.name'),
                'Build-Jdk': System.getProperty('java.version')
    }
}

shadowJar {
    // configurations = [project.configurations.flinkShadowJar]
    mergeServiceFiles()

    // 3. Loại bỏ file rác chữ ký số để tránh lỗi Security khi chạy
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
        vendor = JvmVendorSpec.AMAZON
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.Main'
    applicationDefaultJvmArgs = [
        "-Dlog4j.configurationFile=log4j2.properties",
        // "--add-opens=java.base/java.util=ALL-UNNAMED",
        // "--add-opens=java.base/java.lang=ALL-UNNAMED",
        // "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
        // "--add-opens=java.base/java.io=ALL-UNNAMED",
        // "--add-opens=java.base/java.nio=ALL-UNNAMED"
    ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.named('run') {
    classpath = sourceSets.main.runtimeClasspath + sourceSets.main.compileClasspath
}
